# heic2jpg

./: .gitignore  DEPENDENCY_POLICY.md  LICENSE  README.md  pyproject.toml
src/heic2jpg/: __init__.py  cli.py  converter.py
tests/: test_converter.py
