[project]
name = "heic2jpg"
version = "0.1.0"
description = "A uv-friendly HEIC/HEIF to JPG converter with parallel batch processing."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ian Cleary" }]
license = "MIT"
keywords = ["heic", "heif", "jpg", "jpeg", "converter", "pillow"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
  "pillow>=12.2.0",
  "pillow-heif>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/iancleary/heic2jpg"
Repository = "https://github.com/iancleary/heic2jpg"
Upstream = "https://github.com/dragonGR/PyHEIC2JPG"

[project.scripts]
heic2jpg = "heic2jpg.cli:main"

[dependency-groups]
dev = [
  "build>=1.5.0",
  "pytest>=9.0.3",
  "ruff>=0.15.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
